(Format: Year/Month/Day)
Changes for 0.1.15:
*03/02/22:
   * s/""/'' so the shell does not have to expand the contents of the string
     in fluxbox_generatemenu (Han)
   * Added portability notes in fluxbox_generatemenu (Han)
   * Added file utils menu item in fluxbox_generatemenu (Han)
   * Fixed a resize bug (Henrik)
     Window.cc
   * Fixed bug in menu bullet type (Henrik)
     FbTk/MenuTheme.cc
   * Fixed sloppy focus to use new event handler model (Simon)
     Screen.hh/cc Window.hh/cc fluxbox.hh/cc   
   * Fixed auto hide bug in Toolbar (Henrik)
     Toolbar.cc
   * Fixed default white color bug in Theme (Henrik)
     FbTk/Theme.cc
   * Added toolbar placement menu and fixed resource saving for toolbar placement (Henrik)
	 Toolbar.cc, Screen.cc/hh
   * Fixed vertical text for icons in Iconbar (Henrik)
     IconBar.hh/cc, Toolbar.cc
*03/02/20:
   * Fixed a size bug without titlebar (Henrik)
     Window.cc, FbWinFrame.cc
   * Fixed a clientmenu update bug (Henrik)
     Workspace.hh/cc
   * Fixed slit client resize bug (Henrik)
     Slit.hh/cc
*03/02/19:
   * Fixed transient raise/lower (Henrik)
*03/02/17:
   * Added layer menus for windows, toolbar, and slit, plus associated  (Simon)
     resources. Cleaned up some cruft from the previous layering setup.
     Gnome.cc LayerMenu.hh Screen.hh/cc Slit.hh/cc Tab.cc Toolbar.hh/cc Window.hh/cc Workspace.hh fluxbox.hh/cc
   * Renamed LayeredMenu to FbMenu (Simon)
     LayeredMenu.hh FbMenu.hh
   * Changed XLayerItem to hold FbWindows instead of Windows (Simon)
     XLayerItem.hh/cc XLayer.cc MultLayers.cc Window.cc
   * Added shade option for button config (Henrik)
     Screen.cc
   * Fixed antialias toggle for menus (Henrik)
     Screen.cc
   * Added toolbar width percent change menu item (Henrik) 
     Screen.cc, Toolbar.cc
   * Added IntResMenuItem, for resource<int> changes in the menu (Henrik)
     IntResMenuItem.hh/cc
   * Fixed non opaque moving (Henrik)
     Window.cc